--- a/public/login.html
+++ b/public/login.html
@@ -2,13 +2,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Register</title>
+    <title>Login</title>
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
     <div class="form-container">
-      <h2>Register</h2>
-      <form action="/register" method="POST">
+      <h2>Login</h2>
+      <form action="/login" method="POST">
         <div class="input-group">
           <label for="email">Email</label>
           <input type="email" id="email" name="email" required />
@@ -17,17 +17,8 @@
           <label for="password">Password</label>
           <input type="password" id="password" name="password" required />
         </div>
-        <div class="input-group">
-          <label for="confirm-password">Confirm Password</label>
-          <input
-            type="password"
-            id="confirm-password"
-            name="confirm-password"
-            required
-          />
-        </div>
-        <button type="submit">Register</button>
-        <p>Already have an account? <a href="/auth/login">Login here</a></p>
+        <button type="submit">Login</button>
+        <p>Don't have an account? <a href="/auth/register">Register here</a></p>
       </form>
     </div>
   </body>
