--- a/public/login.html
+++ b/public/login.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,18 +9,36 @@
   <body>
     <div class="form-container">
       <h2>Login</h2>
-      <form action="/login" method="POST">
+      <form>
         <div class="input-group">
           <label for="email">Email</label>
-          <input type="email" id="email" name="email" required />
+          <input
+            type="email"
+            id="email"
+            name="email"
+            required
+            oninput="checkEmail()"
+          />
+          <p id="emailEr" class="error-message"></p>
         </div>
         <div class="input-group">
           <label for="password">Password</label>
-          <input type="password" id="password" name="password" required />
+          <input
+            type="password"
+            id="password"
+            name="password"
+            required
+            oninput="checkPass()"
+          />
+          <p id="passLengthEr" class="error-message"></p>
+          <p id="passUpLowEr" class="error-message"></p>
+          <p id="passNumEr" class="error-message"></p>
+          <p id="passCharEr" class="error-message"></p>
         </div>
-        <button type="submit">Login</button>
+        <button type="submit" onclick="login(event)">Submit</button>
         <p>Don't have an account? <a href="/auth/register">Register here</a></p>
       </form>
     </div>
+    <script src="/main.js"></script>
   </body>
 </html>
