--- a/public/register.html
+++ b/public/register.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,11 +12,28 @@
       <form action="/register" method="POST">
         <div class="input-group">
           <label for="email">Email</label>
-          <input type="email" id="email" name="email" required />
+          <input
+            type="email"
+            id="email"
+            name="email"
+            required
+            oninput="checkEmail()"
+          />
+          <p id="emailEr" class="error-message"></p>
         </div>
         <div class="input-group">
           <label for="password">Password</label>
-          <input type="password" id="password" name="password" required />
+          <input
+            type="password"
+            id="password"
+            name="password"
+            required
+            oninput="checkPass()"
+          />
+          <p id="passLengthEr" class="error-message"></p>
+          <p id="passUpLowEr" class="error-message"></p>
+          <p id="passNumEr" class="error-message"></p>
+          <p id="passCharEr" class="error-message"></p>
         </div>
         <div class="input-group">
           <label for="confirm-password">Confirm Password</label>
@@ -24,11 +42,14 @@
             id="confirm-password"
             name="confirm-password"
             required
+            oninput="confirmPass()"
           />
+          <p id="confirmEr" class="error-message"></p>
         </div>
-        <button type="submit">Register</button>
+        <button type="submit" onclick="register(event)">Submit</button>
         <p>Already have an account? <a href="/auth/login">Login here</a></p>
       </form>
     </div>
+    <script src="/main.js"></script>
   </body>
 </html>
